the_project/manifests/todo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: shared-image-claim
      containers:
        - name: todo-app
          image: miguelsombrero/todo-app@sha256:141cfc80b98d222c0b3c55af4ee0f7260a99be80953efcb6a0107261535ac1a1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
