the_project/manifests/todo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
